[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/common/bullet/sk.png" type="Texture" id=1]
[ext_resource path="res://sprites/common/bullet/arrow.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 65, 10 )

[node name="Arrow" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1, 1 )
rotation = 3.14159
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="VisibleOnScreenNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.874994, 0.906251 )
scale = Vector2( 6.5125, 1.00937 )

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
